minor cosmetic overflow fix

--- a/src/renderer/assets/css/elements/_sidebar.scss
+++ b/src/renderer/assets/css/elements/_sidebar.scss
@@ -19,10 +19,6 @@ body {
     #sidebar {
       width: 100%;
     }
-
-    #sidebar .entry-content {
-      overflow: scroll;
-    }
   }
 
   &:not(.browsing) {
